--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <div class="col-lg-5 col-10">
                 <div class="position-relative">
                   <p class="lead wow fadeInLeft"></p>
-                  <h3 class="no-bottom">Conheça o Método E Expertise da Equipe do Dr. Advogado</h3>
+                  <h3 class="no-bottom">Conheça o Método e Expertise da Equipe do Dr. Advogado</h3>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Quaerat reiciendis eius odio itaque accusamus perferendis
                   similique autem eveniet quam nulla!
