--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                                   <img src="images/arrow-up-right.png" class="img-fluid" alt="" data-jarallax-element="-30">
                               </div>
                               <div class="col-lg-10 col-10">
-                                      <p class="wow fadeInRight" data-wow-delay=".4s">Equipe coesa, apta e muito bem treinada e vivida no dia a dia de um grande e complexo escritório de Advocacia. Temos um ambiente acolheador para Jovens, Mulheres e qualquer tipo de minoria temos um enomre apreço por todos aqui no DR. ADVOGADO.</p>
+                                      <p class="wow fadeInRight" data-wow-delay=".4s">Equipe coesa, apta e muito bem treinada e vivida no dia a dia de um grande e complexo escritório de Advocacia. Temos um ambiente acolheador para Jovens, Mulheres e qualquer tipo de minoria, temos um enorme apreço por todos aqui no DR. ADVOGADO.</p>
                               </div>
                           </div>
                       </div>
